--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "jest": "^24.9.0"
   },
   "dependencies": {
-    "acorn": "5.7.4",
-    "elliptic": "6.5.3",
-    "lodash": "4.17.19"
+    "acorn": "^5.7.4",
+    "elliptic": "^6.5.3",
+    "lodash": "^4.17.19"
   }
 }
